# MLOps

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  README_RU.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/data/: crypto.yaml  default.yaml
configs/infer/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: tcn.yaml
configs/train/: default.yaml
docker/: Dockerfile
docker/triton/models/micro_move/: config.pbtxt
src/crypto_lob_micro_move/: __init__.py  cli.py  tensorrt.py  train.py
src/crypto_lob_micro_move/data/: download.py
src/crypto_lob_micro_move/datamodules/: lob_dm.py
src/crypto_lob_micro_move/export/: onnx.py
src/crypto_lob_micro_move/models/: tcn_module.py
tests/: test_download.py  test_export.py  test_tensorrt.py  test_train.py
